fix(tip_scrollbar): Improve the style of the scrollbar

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -8,6 +8,8 @@
   --color-primary-4: #8e76a9;
   --color-secondary: #CF6C28;
   --color-tertiary: #BA1626;
+
+  --color-primary-transparent: rgba(69, 46, 97, 0.3);
 }
 
 *,
